--- a/style.css
+++ b/style.css
@@ -1,9 +1,7 @@
 .container{
     background: radial-gradient(68.44% 67.52% at 55.15% 32.68%, rgba(229, 76, 145, 0.39) 0%, rgba(244, 139, 123, 0.24) 100%, #F48B7B 100%);
-    grid-template-columns: 50%, 50%;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 10fr));
-    grid-gap: 100px;
+    display: -webkit-box;
+    
 
     
 
@@ -20,7 +18,7 @@
 .frase{
     width: 731px;
     height: 60px;
-    margin-left: 350px;
+    margin-left: 85px;
     margin-top: 57px;
     flex-shrink: 0;
     color: #000;
@@ -46,6 +44,11 @@ line-height: normal;
 letter-spacing: 1.68px;
 }
 
+.loginAlternativo
+{
+    display: flex;
+}
+
 .opcional{
     width: 250px;
     height: 70px;
@@ -53,9 +56,7 @@ letter-spacing: 1.68px;
     border-radius: 10px;
     border: 3px solid #162231;
     background: rgba(217, 217, 217, 0.00);
-    margin-top: 240px;
-    margin-left: 278px;
-    margin-right: 226px;
+    margin: 240px 42px 0px 212px  ;
     display: flex;
     align-items: center;
 }
@@ -106,3 +107,5 @@ letter-spacing: 1.68px;
 
 
     }
+
+
